--- a/Bua_API_Project.ipynb
+++ b/Bua_API_Project.ipynb
@@ -20,13 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 82,
    "id": "59e6fcd8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from scipy.stats import poisson, nbinom"
    ]
   },
   {
@@ -3427,7 +3428,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "4f7b7923",
+   "id": "aa6eaa49",
    "metadata": {},
    "outputs": [
     {
@@ -3500,7 +3501,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "74f5a936",
+   "id": "c265690f",
    "metadata": {},
    "outputs": [
     {
